Arrumando css pag. No Mundo

--- a/Css/style.css
+++ b/Css/style.css
@@ -161,7 +161,7 @@ h2 {
     height: 400px;
     float: left;
     margin: 8px;
-    background-image: url(../Images/No\ Mundo/japao.jpg);
+    background-image: url(../Images/NoMundo/japao.jpg);
     background-size: cover;
     background-position: left 10px center;
     background-repeat: no-repeat;
@@ -173,7 +173,7 @@ h2 {
     height: 400px;
     float: left;
     margin: 8px;
-    background-image: url(../Images/No\ Mundo/Holanda.jpg);
+    background-image: url(../Images/NoMundo/Holanda.jpg);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
