Banner no_mundo

--- a/Css/style.css
+++ b/Css/style.css
@@ -91,7 +91,7 @@ a:hover {
 }
 
 .bannerNoMundoPg{
-    background-image: url(../Images/No\ Mundo/banner_no_mundo.jpg);
+    background-image: url(../Images/NoMundo/banner_no_mundo.jpg);
     background-size: cover;
     background-position:center top -80px;
     background-repeat: no-repeat;
