--- a/Css/style.css
+++ b/Css/style.css
@@ -25,7 +25,7 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 200px;
+    gap: 120px;
 }
 
 .centerLogo {
@@ -83,9 +83,17 @@ a:hover {
 }
 
 .bannerImage1{
-    background-image: url(../Images/Index/Banner.png);
+    background-image: url(../Images/Index/Banner01.jpg);
     background-size: cover;
-    background-position:center -600px;
+    background-position:top -250px center;
+    background-repeat: no-repeat;
+    border-radius: 10px;
+}
+
+.bannerImage2{
+    background-image: url(../Images/Tecnologias/Banner2.jpg);
+    background-size: cover;
+    background-position:top -190px  center;
     background-repeat: no-repeat;
     border-radius: 10px;
 }
@@ -161,6 +169,42 @@ h2 {
     float: left;
     margin: 8px;
     background-image: url(../Images/Index/Drone.png);
+    background-size: cover;
+    background-position: center right -40px;
+    background-repeat: no-repeat;
+    border-radius: 10px;
+}
+
+.quad1Tec{
+    width: 400px;
+    height: 400px;
+    float: left;
+    margin: 8px;
+    background-image: url(../Images/Tecnologias/TecQuad01.jpg);
+    background-size: cover;
+    background-position: center right -40px;
+    background-repeat: no-repeat;
+    border-radius: 10px;
+}
+
+.quad2Tec{
+    width: 400px;
+    height: 400px;
+    float: left;
+    margin: 8px;
+    background-image: url(../Images/Tecnologias/TecQuad02.jpg);
+    background-size: cover;
+    background-position: center right -40px;
+    background-repeat: no-repeat;
+    border-radius: 10px;
+}
+
+.quad3Tec{
+    width: 400px;
+    height: 400px;
+    float: left;
+    margin: 8px;
+    background-image: url(../Images/Tecnologias/TecQuad03.jpg);
     background-size: cover;
     background-position: center right -40px;
     background-repeat: no-repeat;
